--- a/week 1/prac2/index.html
+++ b/week 1/prac2/index.html
@@ -13,9 +13,13 @@
 </head>
 <body>
     <p>Balance: <span id="result"></span></p>
+    
     <button id="increase">Increase</button>
     <button id="decrease">Decrease</button>
 
-    <script src="test.js"></script>
+    
+    <h3>Name: <span id="name"></span></h3>
+
+    <script src="recap.js"></script>
 </body>
 </html>
