--- a/week 2/prac1/index.html
+++ b/week 2/prac1/index.html
@@ -21,11 +21,53 @@
             <a href="#">Footer</a>
         </div>
     </nav>
-
-    <div>
-        <img id="score" src="img/cookie.png" alt="cookie">
-
+    <div class="container">
+        <div class="cookie">
+            <img src="img/cookie.png" alt="cookie">
+        </div>
+        <div class="Store">
+            <h1>Store</h1>
+            <div>
+                <div>
+                    <p>Clicker</p>
+                    <p>Price: <span>499</span></p>
+                    <button>Buy</button>
+                </div>
+                                <div>
+                    <p>Double Tap</p>
+                    <button>Buy</button>
+                    <p>Price: <span>10000 </span>
+                </div>
+                <div>
+                    <p>Golden Sugar</p> 
+                    <button>Buy</button>
+                    <p>Price: <span>20000</span></p>
+                </div>
+                <div>
+                    <p>Icon</p>
+                    <button>Dark Cookie</button>
+                    <p>Price: <span>100</span></p>
+                    <button>Matcha Cookie</button>
+                    <p>Price: <span>200</span></p>
+                    <button>white Cookie</button>
+                    <p>Price: <span>250</span></p>
+                </div>
+                <div>
+                    <p>Skin</p>
+                    <button>Blueberry cheese cookie</button>
+                    <p>Price: <span>500</span></p>  
+                    <button>Strawberry chocolate cookie</button>
+                    <p>Price: <span>1000</span></p>
+                    <button>Vanilla cookie</button>
+                    <p>Price: <span>1500</span></p>
+                </div>
+            </div>
+        </div> 
     </div>
+    
+   
+    
+
     <script src="javascript.js"></script>
 </body>
 </html>
